[package]
name = "gitea"
version = "1.0.0"
authors = ["russell.sim@gmail.com"]
description = "Rust bindings for Gitea"
repository = "https://github.com/russell/rs-gitea"
license = "Apache-2.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
serde_json = "1.0"
base64 = "~0.7.0"
futures = "0.1.16"
hyper = "0.11.6"
url = "1.5"

[dev-dependencies]
tokio-core = "*"
